# 20251022T002431_DanilloSouza03_ecommerce-api

./: .env.example  README.md  pyproject.toml
.github/workflows/: sonarcloud.yml
src/: app.py
src/controllers/: controllers.py
src/models/: models.py
